css/index.css
/* http://meyerweb.com/eric/tools/css/reset/
   v2.0 | 20110126
   License: none (public domain)
*/
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}

/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
  display: block;
}

body {
  line-height: 1;
}

ol, ul {
  list-style: none;
}

blockquote, q {
  quotes: none;
}

blockquote:before, blockquote:after,
q:before, q:after {
  content: '';
  content: none;
}

table {
  border-collapse: collapse;
  border-spacing: 0;
}

/* Set every element's box-sizing to border-box */
* {
  box-sizing: border-box;
}

html, body {
  height: 100%;
  font-family: 'Titillium Web', sans-serif;
}

h1, h2, h3, h4, h5 {
  font-family: 'Bangers', cursive;
  letter-spacing: 1px;
  margin-bottom: 15px;
}

body {
  /* border: dashed red 4px; */
  width: 100%;
  margin: auto;
}

/* nav and logo */
nav {
  background-color: hsl(210, 3%, 97%);
  /*border: dashed red 4px;*/
  display: flex;
  justify-content: space-around;
  width: 100%;
  position: fixed;
}

.navigation {
  display: flex;
  justify-content: space-around;
  align-items: center;
  width: 100%;
}

.navigation a {
  text-decoration: none;
  color: gray;
}

.logo {
  margin: 5%;
}

/********************************************HEADERS**/
header {
  padding-top: 100px;
  /*background-color: darksalmon;*/
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

header .container {
  height: 400px;
  display: grid;
  grid-template-columns: repeat(2, 1fr);
}

.container .introduction {
  text-align: center;
  font-size: 400%;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
}

.header-cage {
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  width: 90%;
  margin-bottom: 15px;
}

.header-cage h1 {
  margin: 10px 0;
}

.header-cage article {
  background-color: hsl(0, 0%, 100%);
  border: 0;
}

/***************************************index.html specific**/
.header-text {
  /* border: dashed red 4px; */
  display: inline-block;
  vertical-align: top;
  text-align: center;
  margin-top: 25%;
  font-size: 350%;
  padding: 0 75px;
  width: 43%;
}

header button {
  /* border: dashed red 4px; */
  font-size: 17px;
  background: hsl(210, 10%, 95%);
  padding: 3px;
  border-radius: 4px;
  border: 1px solid black;
}

/*************************************************************** MAIN CONTENT */
.container {
  grid-gap: 5px;
  /*background-color: dodgerblue;*/
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-template-rows: repeat(3, 1fr);
  padding: 50px;
}

article {
  border: 1px solid black;
  border-radius: 1px;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: flex-start;
  padding: 25px;
  background-color: lightgray;
}

main button {
  background-color: white;
  margin-top: 15px;
}

/*  top-articls,  img, and bottom-content */
.midriff {
  width: 90%;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
}

.upper-articles {
  /*border: dashed red 4px;*/
  margin: 5% 5% 3px 5%;
  display: flex;
  width: 90%;
  overflow: hidden;
  border-top: 1px solid black;
}

.upper-articles article {
  background-color: hsl(0, 0%, 100%);
  border: none;
}

.midriff .middle-img {
  width: 90%;
}

.lower-articles {
  display: flex;
  width: 90%;
  border-bottom: 1px solid black;
}

.lower-articles article {
  background-color: hsl(0, 100%, 100%);
  border: none;
}

/****************************************************************ASIDE*/
aside {
  display: grid;
  grid-template-columns: 1fr 1fr;
  column-gap: 5px;
  padding: 50px;
}

aside article {
  background-color: hsl(0, 0%, 100%);
  border: 0;
  padding: 0;
  line-height: 35px;
}

article li {
  list-style: outside square;
}

aside img {
  width: 100%;
  padding-left: 5px;
}

/* Contact-address paragraph addresses */
address {
  /* border: dashed red 4px; */
  margin-top: 2%;
  width: 90%;
}

address p {
  margin: 20px 0;
}

footer {
  /* border: dashed red 4px; */
  margin: 32px 0;
  text-align: center;
  font-size: 14px;
}

/*note to myself, don't forget to checkout a new branch before starting and commit often*/
/*media queries for tablet and phone*/
/*reverse navigation flow so logo is on top*/
/*hide the large picture next to the h1*/
@media screen and (max-width:800px) {
  nav {
    display: flex;
    flex-direction: column-reverse;
  }
	li{
		text-transform: uppercase;
	}

  .logo {
    align-self: center;
    justify-self: center;
  }

  .introduction-image {
    display: none;
  }

  /*single column view for all things*/
  /*article headlines are flush left*/
  /*mid banner photo is scaled down*/
  /*contact is flush left 33%*/
  @media screen and (max-width:500px) {
    nav {
      position: relative;
      margin-bottom: 10px;
    }

    .navigation {
      flex-direction: column;
    }

    li {
      margin-top: 10px;
      border-top: 1px solid darkgrey;
      width: 100%;
      text-align: center;
    }

    header {
      padding: 0;
    }

    .upper-articles, .lower-articles {
      flex-direction: column;
    }
  }

